# Drx_Trading_Tracker

./: .gitignore  Drx Trading Tracker.py  Readme.md  build_executable.py  drx_config.json  drx_error_fixes.py  icon_converter.py  mt5_stubs.py  pyproject.toml  pyrightconfig.json  requirements.txt  setup.cfg  setup_installer.py
