[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "drx-trading-tracker"
version = "1.2.0"
description = "Professional Trading Journal with automatic broker integration"
readme = "README.md"
license = {text = "Commercial"}
authors = [
    {name = "DRX Trading", email = "info@drx-trading.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]
requires-python = ">=3.7"

# Core dependencies (alle Plattformen)
dependencies = [
    "pandas>=1.3.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "requests>=2.25.0",
    "python-dateutil>=2.8.0",
    "numpy>=1.21.0",
    "Pillow>=8.3.0",
]

[project.optional-dependencies]
# Windows-spezifische Abhängigkeiten
windows = [
    "MetaTrader5>=5.0.0; sys_platform=='win32'",
    "winshell>=0.6; sys_platform=='win32'",
    "pywin32>=227; sys_platform=='win32'",
]

# macOS-spezifische Abhängigkeiten  
macos = [
    "py2app>=0.26; sys_platform=='darwin'",
]

# Build-Tools für Entwickler
build = [
    "pyinstaller>=4.5",
    "auto-py-to-exe>=2.2.0",
]

# Development Tools
dev = [
    "pytest>=6.0.0",
    "black>=21.0.0",
    "flake8>=3.9.0",
    "mypy>=0.910",
    "pylint>=2.9.0",
]

# Alle Windows-Features
full-windows = [
    "drx-trading-tracker[windows,build,dev]"
]

# Alle macOS-Features  
full-macos = [
    "drx-trading-tracker[macos,build,dev]"
]

# Nur Core-Features (Linux/andere)
core = [
    "drx-trading-tracker[dev]"
]

[project.urls]
Homepage = "https://www.drx-trading.com"
Documentation = "https://docs.drx-trading.com"
Repository = "https://github.com/drx-trading/tracker"
Support = "https://support.drx-trading.com"
Changelog = "https://github.com/drx-trading/tracker/blob/main/CHANGELOG.md"

[project.scripts]
drx-trading-tracker = "drx_trading_tracker_improved:main"

[project.gui-scripts]
drx-trading-tracker-gui = "drx_trading_tracker_improved:main"

[tool.setuptools]
packages = ["drx_trading_tracker"]
include-package-data = true

[tool.setuptools.package-data]
drx_trading_tracker = [
    "*.txt",
    "*.md", 
    "*.ico",
    "*.png",
    "templates/*",
    "static/*",
]

# Black Konfiguration
[tool.black]
line-length = 100
target-version = ['py37', 'py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | venv
)/
'''

# MyPy Konfiguration
[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

# Platform-spezifische Ignores
[[tool.mypy.overrides]]
module = [
    "MetaTrader5.*",
    "winshell.*", 
    "win32com.*",
    "matplotlib.*",
    "seaborn.*",
    "pandas.*",
]
ignore_missing_imports = true

# Pytest Konfiguration
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = [
    "tests",
]
python_files = [
    "test_*.py",
    "*_test.py",
]
python_classes = [
    "Test*",
]
python_functions = [
    "test_*",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "windows_only: marks tests that only run on Windows",
    "mt5_required: marks tests that require MT5 installation",
]

# Coverage Konfiguration
[tool.coverage.run]
source = ["drx_trading_tracker"]
omit = [
    "*/tests/*",
    "*/venv/*",
    "setup.py",
    "build_executable.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

# Pylint Konfiguration
[tool.pylint.messages_control]
disable = [
    "C0103",  # Invalid name
    "C0111",  # Missing docstring
    "R0903",  # Too few public methods
    "R0913",  # Too many arguments
    "W0613",  # Unused argument
    "W0622",  # Redefining built-in
]

[tool.pylint.format]
max-line-length = 100

# Flake8 Konfiguration (in setup.cfg da flake8 kein pyproject.toml unterstützt)
# Siehe setup.cfg für flake8 config

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 100