[metadata]
name = drx-trading-tracker
version = 1.2.0
description = Professional Trading Journal with automatic broker integration
long_description = file: README.md
long_description_content_type = text/markdown
url = https://www.drx-trading.com
author = DRX Trading
author_email = info@drx-trading.com
license = Commercial
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Financial and Insurance Industry
    License :: Other/Proprietary License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Office/Business :: Financial :: Investment

[options]
packages = find:
python_requires = >=3.7
include_package_data = True
zip_safe = False

# Core Abhängigkeiten (alle Plattformen)
install_requires =
    pandas>=1.3.0
    matplotlib>=3.5.0
    seaborn>=0.11.0
    requests>=2.25.0
    python-dateutil>=2.8.0
    numpy>=1.21.0
    Pillow>=8.3.0

[options.packages.find]
exclude =
    tests*
    docs*
    build*
    dist*

[options.package_data]
* = 
    *.txt
    *.md
    *.ico
    *.png
    templates/*
    static/*

[options.extras_require]
# Windows-spezifische Abhängigkeiten
windows = 
    MetaTrader5>=5.0.0; sys_platform=="win32"
    winshell>=0.6; sys_platform=="win32"
    pywin32>=227; sys_platform=="win32"

# macOS-spezifische Abhängigkeiten
macos = 
    py2app>=0.26; sys_platform=="darwin"

# Build-Tools
build = 
    pyinstaller>=4.5
    auto-py-to-exe>=2.2.0

# Development Tools
dev = 
    pytest>=6.0.0
    black>=21.0.0
    flake8>=3.9.0
    mypy>=0.910
    pylint>=2.9.0

# Vollständige Installation je Platform
full-windows = %(windows)s %(build)s %(dev)s
full-macos = %(macos)s %(build)s %(dev)s
core = %(dev)s

[options.entry_points]
console_scripts =
    drx-trading-tracker = drx_trading_tracker_improved:main

gui_scripts = 
    drx-trading-tracker-gui = drx_trading_tracker_improved:main

# Flake8 Konfiguration
[flake8]
max-line-length = 100
extend-ignore = 
    E203,  # whitespace before ':'
    E501,  # line too long (handled by black)
    W503,  # line break before binary operator
    F401,  # imported but unused (für __init__.py)
    F403,  # star import
exclude = 
    .git,
    __pycache__,
    build,
    dist,
    *.egg-info,
    .venv,
    venv,
    .tox,
    .mypy_cache,
    .pytest_cache

# Ignoriere Import-Fehler für optionale Module
per-file-ignores =
    */__init__.py:F401,F403
    */error_fixes.py:F401,E402
    */setup_installer.py:F401,E402
    */build_executable.py:F401,E402

# MyPy Konfiguration (Backup falls pyproject.toml nicht funktioniert)
[mypy]
python_version = 3.7
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
check_untyped_defs = True
disallow_untyped_decorators = True
no_implicit_optional = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_no_return = True
warn_unreachable = True
strict_equality = True

[mypy-MetaTrader5.*]
ignore_missing_imports = True

[mypy-winshell.*]
ignore_missing_imports = True

[mypy-win32com.*]
ignore_missing_imports = True

[mypy-matplotlib.*]
ignore_missing_imports = True

[mypy-seaborn.*]
ignore_missing_imports = True

[mypy-pandas.*]
ignore_missing_imports = True

[mypy-numpy.*]
ignore_missing_imports = True

[mypy-PIL.*]
ignore_missing_imports = True

[mypy-requests.*]
ignore_missing_imports = True

# Coverage Konfiguration
[coverage:run]
source = .
omit = 
    */tests/*
    */venv/*
    setup.py
    build_executable.py
    */__pycache__/*
    .tox/*

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    if self\.debug:
    if settings\.DEBUG
    raise AssertionError
    raise NotImplementedError
    if 0:
    if __name__ == .__main__.:
    class .*\bProtocol\):
    @(abc\.)?abstractmethod

[coverage:html]
directory = htmlcov

# Wheel Konfiguration
[bdist_wheel]
universal = 0

# Egg Info
[egg_info]
tag_build = 
tag_date = 0